<resources>
    <string name="app_name">Белый лист заметки</string>
    <string name="start_title">белый лист</string>
    <string name="create">+</string>
    <string name="open">Открыть</string>
    <string name="edit">Редактировать</string>
    <string name="rename">Переименовать</string>
    <string name="move">Переместить</string>
    <string name="share_note">Поделиться</string>
    <string name="delete">Удалить</string>

    <string name="search">Поиск по заметкам и блокнотам</string>
    <string name="undo">Отменить</string>
    <string name="redo">Вернуть</string>
    <string name="settings">Настройки</string>

    <string name="note">Заметка</string>
    <string name="all_notes">Все заметки</string>
    <string name="notebooks">Записные книжки</string>

    <string name="no_notes">Вы пока не создали\nни одной заметки</string>

    <string name="create_notebook">+ Создать записную книжку</string>
    <string name="create_note">Создать заметку</string>

    <string name="empty_notebooks">Записных книжек пока нет</string>

    <string name="dialog_create_notebook_title">Новая записная\nкнижка</string>
    <string name="dialog_create_notebook_subtitle">Дайте название папке, в которой будут группироваться ваши заметки</string>
    <string name="dialog_create_notebook_hint">Введите название, например: Работа</string>

    <string name="dialog_move_note_title">Перемещение\nзаметки</string>
    <string name="dialog_move_note_subtitle">Выберите записную книжку или создайте новую</string>
    <string name="dialog_move_note_hint">Введите название записной книжки</string>

    <string name="title">Название</string>



    <string name="rename_notebook">Переименовать записную книжку</string>

    <string name="fragment_note_list_label">Записная книжка</string>
    <string name="fragment_start_label">Заметки и\nзаписные\nкнижки</string>

    <string name="dialog_rename_subtitle">Введите новое название</string>
    <string name="dialog_rename_hint">Введите название</string>

    <string name="load_archive">Загрузка архива</string>
    <string name="header">Заголовок</string>
    <string name="scroll_down">Прокрутить вниз</string>
    <string name="saveNewNote">Сохранить заметку</string>
    <string name="appendNote">Добавить к заметке</string>
    <string name="cancel">Закрыть</string>

    <string name="protect">Зашифровать</string>
    <string name="unprotect">Снять защиту</string>

    <string name="notebook_blocked_title">Записная книжка\nзащищена</string>
    <string name="notebook_blocked_subtitle">Эта записная книжка защищена. Для просмотра и редактирования нажмите кнопку</string>
    <string name="note_blocked_title">Заметка защищена</string>
    <string name="note_blocked_subtitle">Вы находитесь в защищенной записной книжке. Для редактирования нажмите кнопку</string>

    <string name="note_blocked_unsaved_title">Заметка заблокирована</string>
    <string name="note_blocked_unsaved_subtitle">Во время последнего редактирования были внесены изменения, которые не удалось сохранить</string>

    <string name="unlock">Разблокировать</string>
    <string name="unlock_and_save">Разблокировать и сохранить</string>
    <string name="unsaved_cancel">Выйти</string>


    <plurals name="notes_count">
        <item quantity="one">%d заметка</item>
        <item quantity="few">%d заметки</item>
        <item quantity="many">%d заметок</item>
        <item quantity="other">%d заметок</item>
    </plurals>

    <plurals name="objects_required_count">
        <item quantity="one">%d объект потребует биометрию</item>
        <item quantity="few">%d объекта потребуют биометрию</item>
        <item quantity="many">%d объектов потребуют биометрию</item>
        <item quantity="other">%d объектов потребуют биометрию</item>
    </plurals>

    <string name="view_mode">Режим отображения</string>
    <string name="view_list">Список</string>
    <string name="view_planner">Планер</string>
    <string name="chip_work">Работа</string>
    <string name="chip_study">Учеба</string>
    <string name="chip_private">Личное</string>
    <string name="chip_projects">Проекты</string>

    <string name="export_notes">Экспортировать все заметки</string>
    <string name="import_notes">Загрузить из архива ZIP</string>

    <string name="set_password">Защитить архив паролем</string>
    <string name="export_zip_password">Введите пароль</string>
    <string name="select_import_zip_archive">Выбрать файл ZIP</string>

    <string name="dialog_export_title">Настройки экспорта</string>
    <string name="dialog_export_subtitle">Архив записных книжек будет сохранен в формате ZIP в следующую папку:</string>
    <string name="share_file">Поделиться файлом</string>
    <string name="export_encrypted">Включить зашифрованные записные книжки</string>

    <string name="change_date">Изменить дату</string>
    <string name="export">Экспорт</string>
    <string name="pin_notebook">Закрепить</string>
    <string name="unpin_notebook">Открепить</string>
    <string name="show_more">Show more</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="search_global">Поиск по всем заметкам и записным книжкам</string>
    <string name="next">Следующее</string>
    <string name="prev">Предыдущее</string>
    <string name="plus_note">+ Заметка</string>
    <string name="plus_notebook">+ Записная книжка</string>
    <string name="all_notebooks">Все записные книжки</string>

</resources>

