<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>