<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--item
        android:id="@+id/options_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/options_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom" /-->

    <item android:id="@+id/options_rename_note"
        android:title="@string/rename"
        app:showAsAction="never" />

    <item android:id="@+id/options_move_note"
        android:title="@string/move"
        app:showAsAction="never" />

    <item android:id="@+id/options_share_note"
        android:title="@string/share"
        app:showAsAction="never" />

    <item android:id="@+id/options_share_note_file"
        android:title="@string/share_file"
        app:showAsAction="never" />

    <item android:id="@+id/options_delete_note"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>