<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--item
        android:id="@+id/options_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" /-->

    <item android:id="@+id/options_create_note"
        android:title="@string/create_note"
        app:showAsAction="never" />

    <item android:id="@+id/options_rename_notebook"
        android:title="@string/rename"
        app:showAsAction="never" />

    <item android:id="@+id/options_share_notebook"
        android:title="@string/share"
        app:showAsAction="never" />

    <item android:id="@+id/options_delete_notebook"
        android:title="@string/delete"
        app:showAsAction="never" />

</menu>