<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_main">
        <item
            android:id="@+id/menu_all_notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/all_notes" />
    </group>

    <group android:id="@+id/menu_group_notebooks">
        <item
            android:id="@+id/menu_notebooks"
            android:title="@string/notebooks">
            <menu>
                <item
                    android:id="@+id/menu_one_notebook"
                    android:icon="@drawable/ic_book"
                    android:title="Зап книжка" />
                <item
                    android:id="@+id/menu_create_notebook"
                    android:icon="@drawable/ic_add"
                    android:title="@string/create_notebook" />
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/menu_create_other_notebook"
        android:icon="@drawable/ic_add"
        android:title="@string/create_notebook" />
</menu>