<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/marginHorizontal"
    android:paddingTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dialog_create_notebook_title"
        android:textAppearance="@style/DialogTitle"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dialog_create_notebook_subtitle"
        android:textAppearance="@style/DialogSubtitle"
        android:textColor="?android:attr/textColorSecondary" />

    <EditText
        android:id="@+id/notebook_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_rounded_corners"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="8dp"
        android:hint="@string/dialog_create_notebook_hint"
        android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="@style/NoteEditText" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:paddingVertical="0dp"
        app:chipSpacing="8dp"
        app:chipSpacingVertical="0dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_work"
            style="@style/WhiteLeafChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:paddingVertical="0dp"
            android:text="@string/chip_work" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_study"
            style="@style/WhiteLeafChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:paddingVertical="0dp"
            android:text="@string/chip_study" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_personal"
            style="@style/WhiteLeafChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:paddingVertical="0dp"
            android:text="@string/chip_private" />
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>