<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.note_edit.NoteEditFragment">


    <ru.whiteleaf.notes.common.classes.CustomNestedScrollView

        android:id="@+id/note_edit_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <EditText
                android:id="@+id/note_edit_title"
                style="@style/NoteEditTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
                android:maxLines="2"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:textColor="?attr/android:textColorPrimary"
                android:textColorHighlight="@color/accent_blue"
                tools:text="Название заметки" />

            <TextView
                android:id="@+id/note_edit_date"
                style="@style/NoteEditDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:layout_marginTop="6dp"
                android:textColor="?attr/android:textColorSecondary"
                tools:text="27 ноября 2025" />

            <EditText
                android:id="@+id/note_edit_text"
                style="@style/NoteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/marginHorizontal"
                android:layout_marginTop="32dp"
                android:background="@null"
                android:gravity="start|top"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"
                android:minHeight="400dp"
                android:paddingBottom="100dp"
                android:textColor="?attr/android:textColorPrimary"
                android:textColorHighlight="@color/accent_blue"
                tools:text="Текст заметки..." />

        </LinearLayout>

    </ru.whiteleaf.notes.common.classes.CustomNestedScrollView>

    <ProgressBar
        android:id="@+id/note_edit_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
        android:indeterminateTint="@color/accent_blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_blocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone">

        <TextView
            style="@style/DialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/note_blocked_title"
            android:textColor="?attr/android:textColorPrimary" />

        <TextView
            style="@style/DialogSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/note_blocked_subtitle"
            android:textColor="?attr/android:textColorSecondary" />

        <Button
            android:id="@+id/unlockButton"
            style="@style/StartScreenItemAdd"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_button_round"
            android:padding="0dp"
            android:text="@string/unlock"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_blocked_unsaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone">

        <TextView
            style="@style/DialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/note_blocked_unsaved_title"
            android:textColor="?attr/android:textColorPrimary" />

        <TextView
            style="@style/DialogSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:text="@string/note_blocked_unsaved_subtitle"
            android:textColor="?attr/android:textColorSecondary" />

        <Button
            android:id="@+id/unlockAndSaveButton"
            style="@style/StartScreenItemAdd"
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_button_round"
            android:padding="0dp"
            android:text="@string/unlock_and_save"
            android:textColor="?attr/colorOnPrimary" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/StartScreenItemAdd"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_button_round_stroke"
            android:padding="0dp"
            android:text="@string/unsaved_cancel"
            android:textColor="@color/accent_coral" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/note_scroll_down"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_margin="18dp"
        android:background="@drawable/bg_round"
        android:contentDescription="@string/scroll_down"
        android:elevation="4dp"
        android:paddingTop="3dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow_down"
        android:visibility="gone"
        app:layout_anchor="@id/note_edit_scroll_view"
        app:layout_anchorGravity="bottom|end" />

    <LinearLayout
        android:id="@+id/ll_prev_next_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/note_edit_scroll_view"
        android:visibility="visible"
        app:layout_anchorGravity="top|end"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/prev_match"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="18dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/prev"
            android:elevation="4dp"
            android:paddingTop="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_up"
            android:visibility="visible"
            app:tint="@color/search_matches_button_color_selector" />

        <ImageButton
            android:id="@+id/next_match"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginBottom="18dp"
            android:layout_marginHorizontal="18dp"
            android:background="@drawable/bg_round"
            android:contentDescription="@string/next"
            android:elevation="4dp"
            android:paddingTop="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_down"
            android:visibility="visible"
            app:tint="@color/search_matches_button_color_selector"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>