<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/marginHorizontal"
    android:paddingVertical="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dialog_move_note_title"
        android:textAppearance="@style/DialogTitle"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dialog_move_note_subtitle"
        android:textAppearance="@style/DialogSubtitle"
        android:textColor="?android:attr/textColorSecondary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notebook_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:endIconMode="dropdown_menu"
        app:boxStrokeWidth="0.5dp">

        <AutoCompleteTextView
            android:id="@+id/new_note_notebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:dropDownHeight="180dp"
            android:inputType="textAutoComplete|textCapSentences"
            android:textAppearance="@style/NoteEditText"
            android:hint="@string/dialog_move_note_hint"
            android:maxLines="1"
            android:popupBackground="@drawable/popup_background"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>